fix whitespace below shortened url results

--- a/src/components/result/result.css
+++ b/src/components/result/result.css
@@ -3,7 +3,7 @@
   top: -48px;
   display: flex;
   flex-direction: column;
-  margin: 0 5% 24px 5%;
+  margin: 24px 5% 0px 5%;
   border-radius: 6px;
   background-color: white;
 }
@@ -56,7 +56,7 @@
     top: -36px;
     flex-direction: row;
     justify-content: space-between;
-    margin: 0 10% 18px 10%;
+    margin: 18px 10% 0 10%;
     padding: 0 12px;
   }
 
